cleaned up index.js, added css and jss get handlers, redid example mvc

--- a/mvc/views/Example.hbs
+++ b/mvc/views/Example.hbs
@@ -1,6 +1,25 @@
-{{>Header}}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Example</title>
 
-<h1>{{header}}</h1>
-<p>{{content}}</p>
+    {{!-- Scripts and Styles repeated across all pages --}}
+    {{!-- These scripts should go first --}}
+    {{>Scripts}}
+    {{>Styles}}
+    {{!-- Styles specific to this view --}}
+    <link rel="stylesheet" href="/css/example.css">
+    {{!-- Scripts specific to this view --}}
+    <script src="/js/example.js"></script>
+</head>
+<body>
+    <h1>Example</h1>
+    <p>This is an example page!</p>
 
-{{>Footer}}
+    <h2>Stuff from model</h2>
+    <p>{{content}}</p>
+</body>
+</html>
