--- a/mvc/views/AddUser.hbs
+++ b/mvc/views/AddUser.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Example</title>
+    <title>Add User</title>
 
     {{!-- Scripts and Styles repeated across all pages --}}
     {{!-- These scripts should go first --}}
@@ -12,14 +12,11 @@
     {{>Styles}}
     
     {{!-- Styles specific to this view --}}
-    <link rel="stylesheet" href="/css/example.css">
+    <link rel="stylesheet" href="/css/add_user.css">
     {{!-- Scripts specific to this view --}}
-    <script src="/js/example.js"></script>
+    <script src="/js/add_user.js"></script>
 </head>
 <body>
-    <h1>Example</h1>
-    <p>This is an example page!</p>
-
     <h2>Stuff from model</h2>
     <p>{{content}}</p>
 </body>
