--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,15 @@ body{
     height: 800px;
 
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
 
     background-color: white;
+}
+
+main{
+    display: flex;
+    flex-direction: column;
+
+    margin-top: 100px;
 }
