--- a/mvc/views/ContactList.hbs
+++ b/mvc/views/ContactList.hbs
@@ -17,8 +17,8 @@
     <script src="/js/contact_list.js"></script>
 </head>
 <body>
-    <main>
-        <div>
+    {{!-- <main> --}}
+        <div id="contact-addbar">
             <input id="contact-searchbar" type="text" placeholder="Search.."> 
             <button>+</button> 
         </div>
@@ -43,7 +43,7 @@
 
         </div>
        
-    </main>
+    {{!-- </main> --}}
    
 </body>
 </html>
