fixed login front end stuff

--- a/mvc/views/Login.hbs
+++ b/mvc/views/Login.hbs
@@ -33,7 +33,7 @@
 
             <div class="buttons">
                 <input class="button" type="button" value="Login" onclick="onSubmit();">
-                <input class="button" type="button" value="Register">
+                <input class="button" type="button" value="Register" onclick="goRegister();">
             </div>
         </form>
     </main>
