implemented barebones AddContact, ContactList, and ContactInfo views

--- a/mvc/views/AddContact.hbs
+++ b/mvc/views/AddContact.hbs
@@ -17,7 +17,18 @@
     <script src="/js/add_contact.js"></script>
 </head>
 <body>
-    <h2>Stuff from model</h2>
-    <p>{{content}}</p>
+    <main>
+        <h2>Add Contact</h2>
+        <h3>Username</h3>
+        <textarea id="username-textarea"></textarea>
+        <h3>Nickname</h3>
+        <textarea cols="40" id="nickname-textarea"></textarea>
+        <h3>Notes</h3>
+        <textarea id="notes-textarea"></textarea>
+        <div>
+            <button id="save-button">Save</button>
+        </div>
+        
+    </main>
 </body>
 </html>
