--- a/mvc/views/ContactInfo.hbs
+++ b/mvc/views/ContactInfo.hbs
@@ -17,7 +17,20 @@
     <script src="/js/contact_info.js"></script>
 </head>
 <body>
-    <h2>Stuff from model</h2>
-    <p>{{content}}</p>
+    <main>
+        <h2>Contact Info</h2>
+        <h3>Username</h3>
+        <textarea disabled id="username">{{username}}</textarea>
+        <h3>Nickname</h3>
+        <textarea cols="40" id="nickname-textarea">{{nickname}}</textarea>
+        <h3>Notes</h3>
+        <textarea id="notes-textarea">{{notes}}</textarea>
+
+        <div id="save-delete-buttons">
+            <button id="save-button">Save</button>
+            <button id="delete-button">Delete</button>
+        </div>
+    </main>
+    
 </body>
 </html>
