--- a/css/chat.css
+++ b/css/chat.css
@@ -1,23 +1,35 @@
 body {
-    overflow: hidden;
+    flex-direction: column;
+}
+
+#scroll {
+    overflow-y: scroll;
 }
 
 .chatMessage {
     list-style: none;
 }
 
+.chatMessage:nth-of-type(1n) {
+    padding-left: 25px;
+}
+
 .chatMessage:nth-of-type(2n) {
-    padding-left: 300px;
+    padding-left: 258px;
 }
 
 .messageContact {
     font-size: 25px;
     font-weight: bold;
+    max-width: 200px;
 }
 
 .messageText {
     font-size: 20px;
-    color: blue;
+    background-color: teal;
+    color: white;
+    max-width: 200px;
+    border-radius: 5px;
 }
 
 .messageDate {
@@ -25,6 +37,31 @@ body {
     font-style: italic;
 }
 
-.scroll {
-    overflow-y: scroll;
+#inputArea {
+    height: 50px;
+    background-color: black;
+}
+
+#inputText {
+    height: 90%;
+    width: 88%;
+    padding: 0px;
+    outline: 0px;
+    font-size: 20px;
+    background-color: beige;
+}
+
+#inputButton {
+    height: 97%;
+    width: 10%;
+    padding: 0px;
+    border: 0px;
+    background-color: teal;
+    color: white;
+}
+
+#inputButton:hover {
+    background-color: white;
+    color: teal;
+    cursor: pointer;
 }
