added front-end functionality to contact views

--- a/mvc/views/AddContact.hbs
+++ b/mvc/views/AddContact.hbs
@@ -26,7 +26,7 @@
         <h3>Notes</h3>
         <textarea id="notes-textarea"></textarea>
         <div>
-            <button id="save-button">Save</button>
+            <button id="save-button" onclick="addContact();">Save</button>
         </div>
         
     </main>
