--- a/mvc/views/ContactInfo.hbs
+++ b/mvc/views/ContactInfo.hbs
@@ -27,8 +27,8 @@
         <textarea id="notes-textarea">{{notes}}</textarea>
 
         <div id="save-delete-buttons">
-            <button id="save-button">Save</button>
-            <button id="delete-button">Delete</button>
+            <button onclick="editContact();" id="save-button">Save</button>
+            <button onclick="deleteContact();" id="delete-button">Delete</button>
         </div>
     </main>
     
