--- a/mvc/views/ContactList.hbs
+++ b/mvc/views/ContactList.hbs
@@ -20,7 +20,7 @@
 
         <div id="contact-addbar">
             <input id="contact-searchbar" type="text" placeholder="Search.."> 
-            <button>+</button> 
+            <button onclick="addContact();">+</button> 
         </div>
         <div class="scroll">
 
