Search for Chat view done

--- a/css/chat.css
+++ b/css/chat.css
@@ -2,6 +2,11 @@ body {
     flex-direction: column;
 }
 
+#topPart {
+    width: 100%;
+    text-align: center;
+}
+
 #scroll {
     overflow-y: scroll;
 }
