--- a/mvc/views/Chat.hbs
+++ b/mvc/views/Chat.hbs
@@ -19,7 +19,9 @@
 </head>
 
 <body>
-    <h2>Chat</h2>
+    <div id="topPart">
+        <h2>Chat</h2>
+    </div>
     <div id="scroll">
         {{#each messages}}
         <ul class="chatMessage">
