--- a/css/search_chat.css
+++ b/css/search_chat.css
@@ -2,13 +2,47 @@ body {
     flex-direction: column;
 }
 
+#scroll {
+    overflow-y: scroll;
+}
+
 #topPart {
     width: 100%;
     text-align: center;
 }
 
-#scroll {
-    overflow-y: scroll;
+#inputArea {
+    height: 50px;
+    padding-bottom: 100px;
+    align-items: center;
+    align-content: center;
+}
+
+#searchText {
+    height: 100%;
+    width: 60%;
+    padding: 0px;
+    margin-bottom: 10px;
+    outline: 0px;
+    font-size: 20px;
+    background-color: beige;
+}
+
+#searchButton {
+    height: 100%;
+    width: 60%;
+    padding: 0px;
+    border: 5px solid orangered;
+    font-size: 20px;
+    background-color: orangered;
+    color: white;
+}
+
+#searchButton:hover {
+    border: 5px solid orangered;
+    background-color: white;
+    color: orangered;
+    cursor: pointer;
 }
 
 .chatRow:nth-of-type(1n) {
