--- a/mvc/views/ChatList.hbs
+++ b/mvc/views/ChatList.hbs
@@ -19,7 +19,9 @@
 </head>
 
 <body>
-    <h2>Chat List</h2>
+    <div id="topPart">
+        <h2>Chat List</h2>
+    </div>
     <div id="scroll">
         {{#each chats}}
         <div class="chatRow">
