--- a/mvc/views/CreateChat.hbs
+++ b/mvc/views/CreateChat.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,14 +11,41 @@
     {{!-- These scripts should go first --}}
     {{>Scripts}}
     {{>Styles}}
-    
+
     {{!-- Styles specific to this view --}}
     <link rel="stylesheet" href="/css/create_chat.css">
     {{!-- Scripts specific to this view --}}
     <script src="/js/create_chat.js"></script>
 </head>
+
 <body>
-    <h2>Stuff from model</h2>
-    <p>{{content}}</p>
+    <div id="topPart">
+        <h2>Create a Chat</h2>
+        <div id="inputArea">
+            <input type="text" id="addUsername" name="addUsername" placeholder="Add by Username">
+            <button id="addUsernameButton" onclick="addUsername()">Add User</button>
+        </div>
+        <h2>Added Contacts</h2>
+    </div>
+    <div id="scroll">
+        {{#each addedContacts}}
+        <div class="contactRow">
+            <span class="username">{{username}}</span>
+            <button class="removeButton" onclick="removeContact()">—</button>
+        </div>
+        {{/each}}
+    </div>
+    <div id="topPart">
+        <h2>Add from Contacts</h2>
+    </div>
+    <div id="scroll">
+        {{#each contactsList}}
+        <div class="contactRow">
+            <span class="username">{{username}}</span>
+            <button class="addButton" onclick="addContact()">+</button>
+        </div>
+        {{/each}}
+    </div>
 </body>
+
 </html>
