--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@ html, body{
     background-color: #333;
 }
 
+h1{
+    text-align: center;
+}
+
 html{
     display: flex;
     flex-direction: row;
