--- a/mvc/views/Login.hbs
+++ b/mvc/views/Login.hbs
@@ -18,6 +18,7 @@
 </head>
 <body>
     <main>
+        <h1>Login</h1>
         <img src="https://timesofindia.indiatimes.com/photo/67586673.cms" alt="logo" width="300px">
 
         <form>
