--- a/mvc/views/Register.hbs
+++ b/mvc/views/Register.hbs
@@ -18,6 +18,7 @@
 </head>
 <body>
     <main>
+        <h1>Register</h1>
         <form>
             <div class="form_item">
                 <span>Username</span>
