added image handling

--- a/mvc/views/Login.hbs
+++ b/mvc/views/Login.hbs
@@ -19,7 +19,7 @@
 <body>
     <main>
         <h1>Login</h1>
-        <img src="https://timesofindia.indiatimes.com/photo/67586673.cms" alt="logo" width="300px">
+        <img src="/img/logo.cms" alt="logo" width="300px">
 
         <form>
             <div class="form_item">
