Header Partial for All Pages

--- a/mvc/views/AddContact.hbs
+++ b/mvc/views/AddContact.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,15 +11,16 @@
     {{!-- These scripts should go first --}}
     {{>Scripts}}
     {{>Styles}}
-    
+
     {{!-- Styles specific to this view --}}
     <link rel="stylesheet" href="/css/add_contact.css">
     {{!-- Scripts specific to this view --}}
     <script src="/js/add_contact.js"></script>
 </head>
+
 <body>
     <main>
-        <h2>Add Contact</h2>
+        {{>Header title="Add a Contact" backPath="/contact-list"}}
         <h3>Username</h3>
         <textarea id="username-textarea"></textarea>
         <h3>Nickname</h3>
@@ -28,7 +30,8 @@
         <div>
             <button id="save-button" onclick="addContact();">Save</button>
         </div>
-        
+
     </main>
 </body>
+
 </html>
