--- a/mvc/views/AddUser.hbs
+++ b/mvc/views/AddUser.hbs
@@ -19,8 +19,8 @@
 </head>
 
 <body>
+    {{>Header title="Add a User" backPath="/chat"}}
     <div id="topPart">
-        <h2>Add User</h2>
         <div class="inputArea">
             <input type="text" id="addUsername" name="addUsername" placeholder="Add by Username">
             <button id="addUsernameButton" onclick="addUsername()">Add Username</button>
