--- a/mvc/views/SearchChat.hbs
+++ b/mvc/views/SearchChat.hbs
@@ -19,8 +19,8 @@
 </head>
 
 <body>
+    {{>Header title="Search for Chat" backPath="/home"}}
     <div id="topPart">
-        <h2>Search Chat</h2>
         <div id="inputArea">
             <input type="text" id="searchText" name="searchText" placeholder="Search for Chat">
             <button id="searchButton" onclick="searchChat()">Search</button>
