--- a/css/create_chat.css
+++ b/css/create_chat.css
@@ -14,6 +14,7 @@ body {
 .inputArea {
     height: 50px;
     padding-bottom: 100px;
+    margin-top: 10px;
     align-items: center;
     align-content: center;
 }
