--- a/css/search_chat.css
+++ b/css/search_chat.css
@@ -13,6 +13,7 @@ body {
 
 #inputArea {
     height: 50px;
+    margin-top: 10px;
     padding-bottom: 100px;
     align-items: center;
     align-content: center;
