--- a/mvc/views/ContactList.hbs
+++ b/mvc/views/ContactList.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,38 +11,40 @@
     {{!-- These scripts should go first --}}
     {{>Scripts}}
     {{>Styles}}
-    
+
     {{!-- Styles specific to this view --}}
     <link rel="stylesheet" href="/css/contact_list.css">
     {{!-- Scripts specific to this view --}}
     <script src="/js/contact_list.js"></script>
 </head>
+
 <body>
+    {{>Header title="Contact List" backPath="/home"}}
+    <div id="contact-addbar">
+        <input id="contact-searchbar" type="text" placeholder="Search..">
+        <button onclick="addContact();">+</button>
+    </div>
+    <div class="scroll">
 
-        <div id="contact-addbar">
-            <input id="contact-searchbar" type="text" placeholder="Search.."> 
-            <button onclick="addContact();">+</button> 
-        </div>
-        <div class="scroll">
+        {{#each payload}}
+        <div class="contact-group" id="contact-group-{{@key}}">
+            <h3 class="contact-group-head">
+                {{@key}}
+            </h3>
 
-            {{#each payload}}  
-                <div class="contact-group" id="contact-group-{{@key}}">
-                    <h3 class="contact-group-head">
-                        {{@key}}
-                    </h3>
-
-                    <div class="contact-group-body">
-                        {{#each this}}
-                            <div class="contact-group-item" onclick="displayInfo('{{this.username}}');">
-                                {{this.username}}
-                            </div>
-                        {{/each}}
-                    </div>
-                    
+            <div class="contact-group-body">
+                {{#each this}}
+                <div class="contact-group-item" onclick="displayInfo('{{this.username}}');">
+                    {{this.username}}
                 </div>
-            {{/each}}
+                {{/each}}
+            </div>
 
         </div>
-   
+        {{/each}}
+
+    </div>
+
 </body>
+
 </html>
