--- a/mvc/views/CreateChat.hbs
+++ b/mvc/views/CreateChat.hbs
@@ -19,8 +19,8 @@
 </head>
 
 <body>
+    {{>Header title="Create a Chat" backPath="/home"}}
     <div id="topPart">
-        <h2>Create a Chat</h2>
         <div class="inputArea">
             <input type="text" id="addUsername" name="addUsername" placeholder="Add by Username">
             <button id="addUsernameButton" onclick="addUsername()">Add User</button>
