--- a/mvc/views/Partials/Header.hbs
+++ b/mvc/views/Partials/Header.hbs
@@ -1,7 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>{{title}}</title>
-    </head>
-    <body>
-        
+<style>
+    #headerDiv {
+        background-color: blue;
+        height: 50px;
+    }
+
+    #backButton {
+        height: 100%;
+        width: 40px;
+        border: 0px;
+        border-right: 1px solid white;
+        font-size: 20px;
+        background-color: blue;
+        color: white;
+    }
+
+    #backButton:hover {
+        cursor: pointer;
+        background-color: white;
+        color: blue;
+    }
+
+    #backButton>*:hover {
+        color: blue;
+    }
+
+    #backButton>a {
+        text-decoration: none;
+        color: white;
+        width: 100%;
+        height: 100%;
+    }
+
+    #headerText {
+        height: 100%;
+        padding-left: 30px;
+        color: white;
+        font-size: 24px;
+        font-weight: bold;
+    }
+</style>
+
+
+<div id="headerDiv">
+    <button id="backButton" href={{backPath}}><a href={{backPath}}>◄</a></button>
+    <span id="headerText">{{title}}</span>
+</div>
