--- a/mvc/views/ContactList.hbs
+++ b/mvc/views/ContactList.hbs
@@ -34,7 +34,7 @@
 
             <div class="contact-group-body">
                 {{#each this}}
-                <div class="contact-group-item" onclick="displayInfo('{{this.username}}');">
+                <div class="contact-group-item" onclick="displayInfo('{{this.userID}}');">
                     {{this.username}}
                 </div>
                 {{/each}}
