--- a/mvc/views/ContactInfo.hbs
+++ b/mvc/views/ContactInfo.hbs
@@ -19,20 +19,22 @@
 </head>
 
 <body>
-    <main>
+    {{!-- <main> --}}
         {{>Header title="Contact Info" backPath="/contact-list"}}
-        <h3>Username</h3>
-        <textarea disabled id="username">{{username}}</textarea>
-        <h3>Nickname</h3>
-        <textarea cols="40" id="nickname-textarea">{{nickname}}</textarea>
-        <h3>Notes</h3>
-        <textarea id="notes-textarea">{{notes}}</textarea>
+        <div id="contact-info-interface">
+            <h3>Username</h3>
+            <textarea disabled id="username">{{username}}</textarea>
+            <h3>Nickname</h3>
+            <textarea cols="40" id="nickname-textarea">{{nickname}}</textarea>
+            <h3>Notes</h3>
+            <textarea id="notes-textarea">{{notes}}</textarea>
 
-        <div id="save-delete-buttons">
-            <button onclick="editContact();" id="save-button">Save</button>
-            <button onclick="deleteContact();" id="delete-button">Delete</button>
+            <div id="save-delete-buttons">
+                <button onclick="editContact({{id}});" id="save-button">Save</button>
+                <button onclick="deleteContact({{id}});" id="delete-button">Delete</button>
+            </div>
         </div>
-    </main>
+    {{!-- </main> --}}
 
 </body>
 
