--- a/mvc/views/ContactList.hbs
+++ b/mvc/views/ContactList.hbs
@@ -21,8 +21,7 @@
 <body>
     {{>Header title="Contact List" backPath="/home"}}
     <div id="contact-addbar">
-        <input id="contact-searchbar" type="text" placeholder="Search..">
-        <button onclick="addContact();">+</button>
+        <button id="contact-button" onclick="addContact();">+</button>
     </div>
     <div class="scroll">
 
