search chat and join chat implemented

--- a/mvc/views/AddUser.hbs
+++ b/mvc/views/AddUser.hbs
@@ -31,7 +31,7 @@
         {{#each addedContacts}}
         <div class="contactRow">
             <span class="username">{{username}}</span>
-            <button class="removeButton" onclick="removeUser()">—</button>
+            {{!-- <button class="removeButton" onclick="removeUser()">—</button> --}}
         </div>
         {{/each}}
     </div>
@@ -46,11 +46,11 @@
         </div>
         {{/each}}
     </div>
-    <div id="topPart">
+    {{!-- <div id="topPart">
         <div class="inputArea">
             <button id="createChatButton" onclick="addUsers()">Add User(s)</button>
         </div>
-    </div>
+    </div> --}}
 </body>
 
 </html>
