--- a/mvc/views/AddUser.hbs
+++ b/mvc/views/AddUser.hbs
@@ -39,10 +39,10 @@
         <h2>Add from Contacts</h2>
     </div>
     <div id="scroll">
-        {{#each contactsList}}
+        {{#each contacts}}
         <div class="contactRow">
             <span class="username">{{username}}</span>
-            <button class="addButton" onclick="addContact()">+</button>
+            <button class="addButton" onclick="addContact('{{userID}}')">+</button>
         </div>
         {{/each}}
     </div>
