--- a/css/add_user.css
+++ b/css/add_user.css
@@ -1,9 +1,11 @@
 body {
     flex-direction: column;
+    justify-content: flex-start;
 }
 
 #scroll {
     overflow-y: scroll;
+    height: 100%;
 }
 
 #topPart {
