added backpath to adduser

--- a/mvc/views/AddUser.hbs
+++ b/mvc/views/AddUser.hbs
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    {{>Header title="Add a User" backPath="/chat"}}
+    {{>Header title="Add a User" }}
     <div id="topPart">
         <div class="inputArea">
             <input type="text" id="addUsername" name="addUsername" placeholder="Add by Username">
