--- a/css/chat.css
+++ b/css/chat.css
@@ -15,12 +15,12 @@ body {
     list-style: none;
 }
 
-.chatMessage:nth-of-type(1n) {
+.chatMessage {
     padding-left: 25px;
 }
 
-.chatMessage:nth-of-type(2n) {
-    padding-left: 248px;
+.myMessage {
+    padding-left: 248px !important;
 }
 
 .messageContact {
@@ -58,7 +58,7 @@ body {
 }
 
 #addUserButton {
-    height: 80%;
+    height: 84%;
     width: 10%;
     padding: 0px;
     border: 0px;
