--- a/mvc/views/Chat.hbs
+++ b/mvc/views/Chat.hbs
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    {{>Header title="Chat" backPath="/chat-list"}}
+    {{>Header backPath="/chat-list"}}
     <div id="scroll">
         {{#each messages}}
         {{#if this.isCurrent}}
