--- a/css/search_chat.css
+++ b/css/search_chat.css
@@ -57,6 +57,7 @@ body {
 }
 
 .chatRow {
+    
     height: 50px;
     font-size: 24px;
     max-width: 100%;
@@ -82,6 +83,7 @@ body {
 }
 
 .chatName {
+    cursor: pointer;
     font-weight: bold;
 }
 
