--- a/mvc/views/CreateChat.hbs
+++ b/mvc/views/CreateChat.hbs
@@ -19,7 +19,11 @@
 </head>
 
 <body>
+    {{!-- Header partial --}}
     {{>Header title="Create a Chat" backPath="/home"}}
+
+    {{!-- Enter chat name --}}
+    {{!-- Add user by username --}}
     <div id="topPart">
         <div class="inputArea">
             <input type="text" id="chatname" placeholder="Chat Name">
@@ -28,7 +32,7 @@
         </div>
         <h2>Added Contacts</h2>
     </div>
-    
+
     <div id="added"></div>
 
     <div id="topPart">
