--- a/css/search_chat.css
+++ b/css/search_chat.css
@@ -48,9 +48,13 @@ body {
     cursor: pointer;
 }
 
+/* Change row colors for ODD numbers */
+
 .chatRow:nth-of-type(1n) {
     background-color: burlywood;
 }
+
+/* Change row colors for EVEN numbers */
 
 .chatRow:nth-of-type(2n) {
     background-color: beige;
@@ -61,11 +65,9 @@ body {
     height: 50px;
     font-size: 24px;
     max-width: 100%;
-    /* Temporary solution */
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
-    /* Temporary solution */
 }
 
 .optionsButton {
