--- a/mvc/views/CreateChat.hbs
+++ b/mvc/views/CreateChat.hbs
@@ -33,13 +33,17 @@
         <h2>Added Contacts</h2>
     </div>
 
+    {{!-- List all users about to be added to new chat --}}
     <div id="added"></div>
 
     <div id="topPart">
         <h2>Add from Contacts</h2>
     </div>
+
+    {{!-- List all users in Contact List --}}
     <div id="not_added"></div>
 
+    {{!-- Create chat button --}}
     <div id="topPart">
         <div class="inputArea">
             <button id="createChatButton" onclick="createChat()">Create Chat</button>
